Add reverse GeoIP lookup functionality
